# gpu-matrix-multiplication-cuda

./: README.md  Run_task1.bat  Run_task2.bat
Task1/: CMakeLists.txt  README.md  matrix_mul.cu  matrix_mul_optimized.cu
Task2/: CMakeLists.txt  README.md  matrix_mul_modified.cu
